left align bug solved

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,5 +1,5 @@
 .section__main{
-    width: 80%;
+   
     margin: 0 auto;
     text-align: start;
 
